# bn-dd

./: .gitignore  .gitmodules  .pylintrc  G.gml  README.md  algorithms  benchmark_nevergrad.py  compile_sources.sh  compile_sources_edd.sh  ex  experi  experime  experiment  models_ddinfo.json  requirements.txt  run.py  setup.py
conf/: generate_config.py
data/: BN.bif  BN.xmlbif
dd_inf/: interface.cpp
dd_inference/: CMakeLists.txt  __init__.py  analyze_bn.cpp  bn-test.cpp  bnbdd_inference.cpp  bnbdd_inference.hpp  interface.cpp  test_inference.cpp  wpbdd_inference.cpp  wpbdd_inference.hpp
experiments/: experiments_causalq.sh  experiments_lalonde.sh  experiments_lg.sh  experiments_nm.sh  log_202303010160216.txt  log_202303010260216.txt  log_202303010360216.txt  log_202303010460216.txt  log_202303010560216.txt  log_202303010660216.txt  log_202303010760216.txt  log_202303010860216.txt  log_202303010960216.txt  log_202303011060216.txt  log_202303011160216.txt  log_202303011260216.txt  log_202303011360216.txt  log_202303011460216.txt  log_202303011560216.txt  log_202303011660216.txt  log_202303011760216.txt  log_202303011860216.txt  log_202303011960216.txt  log_202303012060216.txt  log_20230301260216.txt  log_20230301360216.txt  log_20230301460216.txt  log_20230301560216.txt  log_20230301660216.txt  log_20230301760216.txt  log_20230301860216.txt  log_20230301960216.txt  log_202303021451016.txt  log_202303021451026.txt  log_202303021451036.txt  log_202303021451046.txt  log_202303021451056.txt  log_202303021451066.txt  log_202303021451076.txt  log_202303021451086.txt  (+19 more)
models/: BN.cnf  BN.cnf_probs  BN.cnf_rv_vars  BN_EB.cnf  BN_EB.cnf_probs  BN_EB.cnf_rv_vars  BN_EB.xmlbif  BN_MDLP.cnf_probs  BN_MDLP.xmlbif  BN_MDLP_EB.cnf  BN_MDLP_EB.cnf_probs  BN_MDLP_EB.cnf_rv_vars  BN_MDLP_EB.xmlbif  BN_MDLP_OC.cnf  BN_MDLP_OC.cnf_probs  BN_MDLP_OC.xmlbif  line.cnf  line.cnf_probs  line.cnf_rv_vars  (+13 more)
src/: CMakeLists.txt  bn-test.cpp
(+14884 files in other folders)
